# game-engine

./: .gitignore  CMakeLists.txt
res/shaders/: fragment.txt  vertex.txt
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
